*** 19990812_1 by lusky
revved patchlevel to b97
ip hash function fix (th)


*** 19990811_1 by lusky
fake direction bug fix to send.c (th)
throttle accept errors in listener.c
oper motd rehash bug fix from perly
ensure that SERVER must come before SVINFO (jl)
unneed stropt.h include in s_bsd.c
neglected to detach_conf for umode -o (jl)


*** 19990810_1 by lusky
revved patchlevel to b96
fixed bug with NO_JOIN_ON_SPLIT on a coldstart
FLAGS_SPY was being checked against old flags in m_whois, its now umodes (db)
%lu screws up idle times as seen by a lot of scripts, notably bitchx (db)
added include for stdlib.h to mkpasswd.c
moved rcs Id into comments in fixklines.c


*** 19990809_2 by lusky
remove <sys/syslog.h> check from configure, assume <syslog.h> exists (sw)
cleaned up attach_Iline some more (db)


*** 19990809_1 by lusky
bumped patchlevel to b95
removed unneeded arg to attach_Iline and fixed tklines for non-resolving hosts
fixes to allow SLAVE_SERVER to work (db)
RPL_MYINFO should report the user modes and channel modes available (db)
missed the user mode +b for bots (db)
applied neph's operwall/wallops pacing patch (db)


*** 19990806_2 by lusky
updated patchlevel.h to b94 for new tarball


*** 19990806_1 by lusky
diane fixed another unkline bug.


*** 19990805_2 by lusky
fixed rehash dump, would core on bad admin line


*** 19990805_1 by lusky
bumped patchlevel for new tarball
added KNOWN BUGS to relnotes
bug in stats Q line found by Dustin Marquess (Jailbird)
in client.h, umodes were moved to umodes in client, forgot to redefine the macros for SetInvisible etc.
user_mode allowed decrement of oper count even if client was not opered



*** 19990804_2 by lusky
bumped patchlevel to b92 for new beta snapshot


*** 19990804_1 by lusky
fix for IP Klines in stats from Diane
fix for broken m_unkline.c from Diane it would unkline everything
fix for lusers from Tom


*** 19990803_2 by lusky
bumped patchlevel for new tarball


*** 19990803_1 by lusky