@@ -1,1 +1,1 @@
-#define SERIALNUM "19990812_1"
+#define SERIALNUM "19990816_1"
